--- a/html-lessons/CSSlesson1.html
+++ b/html-lessons/CSSlesson1.html
@@ -19,7 +19,7 @@
     <h1 id="main-headline">Intro to HTML Lesson</h1>
     <h1 class="main-headline">Another Headline</h1>
     <h2>My Very nice subtitle </h2>
-    <h3 style ="font-size: 64px;>"Another Headline Right Here </h3>
+    <h3 style ="font-size: 64px>"Another Headline Right Here </h3>
     <h4>This is a even smaller header </h4>
 
 <p>
