--- a/html-lessons/CSSlesson2.html
+++ b/html-lessons/CSSlesson2.html
@@ -7,7 +7,7 @@
     <title>CSS Lesson 02</title>
     <meta name= "keywords" content= "lesson, HTML, Binghamton University">
     <meta name= "description" content="This is a basic intro to HTML coding.">
-    <link rel="stylesheet" type="text/css" href="css/css-lesson-02.css">
+    <link rel="stylesheet" type="text/css" href="../css/css-lesson-02.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Vollkorn:wght@600&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
 
     <p class="byline">By Jon Cohen | 10 Jun 2022, 4:25pm </p> 
 
-    <img src="Images/globe.jpg" />
+    <img src="../Images/globe.jpg" />
 
     <p>The name “hMPXV A.1” may not roll off the tongue, but a prominent, international group of researchers contends that something like it should emerge from an overhaul of the current naming system for monkeypox and its so-called West African and Congo Basin strains.</p>
 
