--- a/html-lessons/CSSlesson3.html
+++ b/html-lessons/CSSlesson3.html
@@ -7,7 +7,7 @@
     <title>CSS Lesson 03 - Box Model and Sizing Units </title>
     <meta name= "keywords" content= "lesson, HTML, Binghamton University">
     <meta name= "description" content="This is a basic intro to HTML coding.">
-    <link rel="stylesheet" type="text/css" href="css/css-lesson-03.css">
+    <link rel="stylesheet" type="text/css" href="../css/css-lesson-03.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Vollkorn:wght@600&display=swap" rel="stylesheet">
   
