--- a/html-lessons/CSSlesson4 assignment 2.html
+++ b/html-lessons/CSSlesson4 assignment 2.html
@@ -7,7 +7,7 @@
     <title>CSS Lesson 04 - Intro to CSS Grid </title>
     <meta name= "keywords" content= "lesson, HTML, Binghamton University">
     <meta name= "description" content="This is a basic intro to HTML coding.">
-    <link rel="stylesheet" type="text/css" href="css/css-lesson-04 assignment 2.css">
+    <link rel="stylesheet" type="text/css" href="../css/css-lesson-04 assignment 2.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Vollkorn:wght@600&display=swap" rel="stylesheet">
   
