--- a/html-lessons/html-lesson.html
+++ b/html-lessons/html-lesson.html
@@ -7,7 +7,7 @@
     <title>HTML Lesson</title>
     <meta name= "keywords" content= "lesson, HTML, Binghamton University">
     <meta name= "description" content="This is a basic intro to HTML coding.">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
  </head>
 
  <body>
@@ -28,7 +28,7 @@
 
 
 <p>
-    <a href="https://unsplash.com/s/photos/family" target="_blank"><img src="images/family.jpg" title="My fam" alt="Here's my family" width="500" /></a>
+    <a href="https://unsplash.com/s/photos/family" target="_blank"><img src="../Images/family.jpg" title="My fam" alt="Here's my family" width="500" /></a>
 </p>
 <! -- This is a comment -->
 
