--- a/Contact.html
+++ b/Contact.html
@@ -67,7 +67,7 @@
         <div id="writings-holder" class="grid">
 
           <div class="width-12-12-m width-9-12 writing-item">
-            <h2><a href="Contact.html">Contact</a></h2>
+            <h2><a href="Contact.html">Contact Me</a></h2>
             <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.</p>
 
             
